Fix wrong table name

--- a/logstash.conf
+++ b/logstash.conf
@@ -5,7 +5,7 @@ input {
     jdbc_connection_string => "jdbc:mysql://localhost:3306/djangodb?verifyServerCertificate=false&useSSL=true"
     jdbc_user => "username"
     jdbc_password => "password"
-    statement => "SELECT r.*, v.vector from Recipe r join recipe_vector v where r.id = v.id and r.reviewed is true"
+    statement => "SELECT r.*, v.vector from Recipe r join recipe_factor v where r.id = v.id and r.reviewed is true"
   }
 }
 
